--- a/React-Projects/calculator-ui-only-project/package.json
+++ b/React-Projects/calculator-ui-only-project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-modules",
+  "name": "calculator-ui-only-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
